--- a/styles/aside.module.css
+++ b/styles/aside.module.css
@@ -4,7 +4,18 @@
   background-color: var(--black-800);
   text-align: center;
   border-radius: 16px;
-  margin: 0 32px 16px 16px;
+  order: 1;
+  margin-top: 16px;
+}
+
+.helpMe {
+  padding: 16px;
+}
+@media (min-width: 768px) {
+  .aside {
+    order: 0;
+    margin: 0 32px 16px 16px;
+  }
 }
 
 .about__image {
