--- a/styles/global.css
+++ b/styles/global.css
@@ -65,13 +65,23 @@ button {
   justify-content: space-between;
 }
 
-.content {
-  display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
+.container__full {
+  width: fit-content;
 }
 
-.container__full {
-  width: 100%;
+.content {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  .content {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+  }
+  .container__full {
+    width: 100%;
+  }
 }
 
 .underConstruction {
