--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -1,11 +1,12 @@
 .badge__skills {
-  gap: 16px;
+  gap: 8px;
   flex-wrap: wrap;
   padding: 16px 0;
 }
 
 .badge {
   background: var(--orange-900);
+  color: var(--white-900);
   padding: 4px 8px;
   border-radius: 8px;
   text-transform: uppercase;
@@ -14,10 +15,17 @@
 
 .about {
   padding: 16px;
+  background-color: var(--white-900);
+}
+.about.dark {
+  background-color: var(--black-900);
+}
+.about p {
+  text-align: justify;
 }
 @media (min-width: 768px) {
   .about {
-    padding: 16px 16px 16px 0;
+    padding: 32px;
   }
 }
 
@@ -30,8 +38,12 @@
 
 .about__description {
   padding: 0;
+  text-align: center;
 }
-
+.about__imageContainer {
+  width: 100%;
+  text-align: center;
+}
 .about__image {
   width: 250px;
   height: 250px;
@@ -51,13 +63,15 @@
   justify-content: center;
   padding: 16px;
 }
-
+.about__wrapper {
+  text-align: center;
+}
 @media (min-width: 768px) {
   .about__content {
     justify-content: flex-start;
   }
-  .about__username {
+  /* .about__username {
     justify-content: flex-start;
     text-align: left;
-  }
+  } */
 }
