--- a/styles/aside.module.css
+++ b/styles/aside.module.css
@@ -1,11 +1,10 @@
 .aside {
-  max-height: 67rem;
   padding: 32px 16px;
-  background-color: var(--black-800);
-  text-align: center;
-  border-radius: 16px;
+  text-align: center !important;
+  justify-content: flex-start !important;
+  /* border-radius: 16px; */
   order: 1;
-  margin-top: 16px;
+  /* margin-top: 16px; */
 }
 
 .helpMe {
@@ -14,7 +13,9 @@
 @media (min-width: 768px) {
   .aside {
     order: 0;
-    margin: 0 32px 16px 16px;
+    width: 360px;
+    max-width: 100%;
+    /* margin: 0 32px 16px 16px; */
   }
 }
 
