--- a/styles/global.css
+++ b/styles/global.css
@@ -1,9 +1,12 @@
 :root {
   --white-900: #ffffff;
+  --white-800: #f4f4f4;
   --black-950: #121214;
+  --black-925: #232323;
   --black-900: #272727;
   --black-800: #2c2b2d;
   --gray-900: #828083;
+  --blue-900: #152032;
   --orange-900: #f65010;
   --animation-duration: 0.2s;
 }
@@ -16,23 +19,47 @@
 }
 
 html {
-  font-size: 10px;
+  font-size: 62.5%;
   scroll-behavior: smooth;
 }
 
 body {
   -webkit-font-smoothing: antialiased;
-  background-color: var(--black-900);
+}
+main {
+  background-color: var(--white-800);
+  color: var(--black-900);
+}
+main.dark {
+  background-color: var(--black-800);
   color: var(--white-900);
 }
-
+header {
+  background: var(--blue-900);
+  color: var(--white-900);
+}
+main.dark header {
+  background: var(--black-925);
+}
+aside {
+  background-color: var(--white-800);
+}
+main.dark aside {
+  background: var(--black-800);
+}
+main .wrapper {
+  background: var(--white-900);
+}
+main.dark .wrapper {
+  background: var(--black-900);
+}
 body,
 input,
 textarea,
 button {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
-  font-size: 1.6rem;
+  font-size: 2rem;
 }
 
 a {
@@ -76,8 +103,7 @@ button {
 
 @media (min-width: 768px) {
   .content {
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    flex-direction: row;
   }
   .container__full {
     width: 100%;
@@ -94,6 +120,7 @@ button {
 
 pre {
   background: var(--black-950);
+  color: var(--white-900);
   border-radius: 8px;
   padding: 16px;
   margin: 16px 0;
@@ -136,4 +163,9 @@ li {
 hr {
   margin: 16px 0;
   border: 1px solid var(--white-900);
+}
+@media (min-width: 768px) {
+  main .wrapper {
+    padding: 32px;
+  }
 }
