change button lp

--- a/styles/lp.module.css
+++ b/styles/lp.module.css
@@ -58,6 +58,24 @@
   line-height: 25px;
   height: 54px;
 }
+
+.video__button__close {
+  background-color: var(--gray-900);
+  padding: 16px;
+  border: 1px solid var( --gray-900);
+  border-radius: 32px;
+  font-weight: bold;
+  margin-top: 32px;
+  font-size: 20px;
+  box-shadow: 9px 16px 19px var(--lp-black-900);
+  transition: 0.8s all;
+  font-family: var(--lp-font-secundary);
+  text-transform: uppercase;
+  color: var(--black-950);
+  line-height: 25px;
+  height: 54px;
+}
+
 .video__button:hover {
   background: var(--lp-green-900);
   color: var(--lp-white-800);
